Set better window size

Make sure the window is not too big for the screen size.
The previous version did that in a way that didn't work
with some images size, particularly on 16:9 displays.

https://bugzilla.gnome.org/show_bug.cgi?id=630512